--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,6 +20,11 @@ add_executable(
     test_operator_strategy.cc
 )
 
+add_executable(
+    test_expression
+    test_expression.cc
+)
+
 target_link_libraries(
     test_scanner
     LOX_LIB
@@ -44,6 +49,12 @@ target_link_libraries(
     ${google_test}
 )
 
+target_link_libraries(
+    test_expression
+    LOX_LIB
+    ${google_test}
+)
+
 add_test(
     NAME test_scanner
     COMMAND test_scanner
@@ -62,4 +73,9 @@ add_test(
 add_test(
     NAME test_operator_strategy
     COMMAND test_operator_strategy
+)
+
+add_test(
+    NAME test_expression
+    COMMAND test_expression
 )
