--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,6 +30,11 @@ add_executable(
     test_parser.cc
 )
 
+add_executable(
+    test_interpreter
+    test_interpreter.cc
+)
+
 target_link_libraries(
     test_scanner
     LOX_LIB
@@ -66,6 +71,12 @@ target_link_libraries(
     ${google_test}
 )
 
+target_link_libraries(
+    test_interpreter
+    LOX_LIB
+    ${google_test}
+)
+
 add_test(
     NAME test_scanner
     COMMAND test_scanner
@@ -94,4 +105,9 @@ add_test(
 add_test(
     NAME test_parser
     COMMAND test_parser
+)
+
+add_test(
+    NAME test_interpreter
+    COMMAND test_interpreter
 )
