--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,7 @@
 find_package(GTest REQUIRED)
 set(google_test GTest::GTest GTest::Main)
+
+
 add_executable(
     test_scanner
     test_scanner.cc
@@ -10,10 +12,6 @@ add_executable(
     test_token.cc
 )
 
-add_executable(
-    test_value
-    test_value.cc
-)
 
 add_executable(
     test_operator_strategy
@@ -40,6 +38,11 @@ add_executable(
     test_environment.cc
 )
 
+add_executable(
+    test_object
+    test_object.cc
+)
+
 target_link_libraries(
     test_scanner
     LOX_LIB
@@ -52,11 +55,6 @@ target_link_libraries(
     ${google_test}
 )
 
-target_link_libraries(
-    test_value
-    LOX_LIB
-    ${google_test}
-)
 
 target_link_libraries(
     test_operator_strategy
@@ -88,6 +86,12 @@ target_link_libraries(
     ${google_test}
 )
 
+target_link_libraries(
+    test_object
+    LOX_LIB
+    ${google_test}
+)
+
 add_test(
     NAME test_scanner
     COMMAND test_scanner
@@ -96,11 +100,6 @@ add_test(
 add_test(
     NAME test_token
     COMMAND test_token
-)
-
-add_test(
-    NAME test_value
-    COMMAND test_value
 )
 
 add_test(
@@ -126,4 +125,9 @@ add_test(
 add_test(
     NAME test_environment
     COMMAND test_environment
+)
+
+add_test(
+    NAME test_object
+    COMMAND test_object
 )
