try to find Gtest if it's not found

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,19 @@
-find_package(GTest REQUIRED)
-set(google_test GTest::GTest GTest::Main)
+# Check if Google Test is installed
+find_package(GTest QUIET)
 
+if (NOT GTest_FOUND)
+    message(STATUS "Google Test not found. Installing Google Test...")
+
+    include(FetchContent)
+    FetchContent_Declare(
+        googletest
+        URL https://github.com/google/googletest/archive/release-1.11.0.zip
+    )
+    FetchContent_MakeAvailable(googletest)
+endif()
+
+# Set Google Test variables
+set(google_test GTest::gtest GTest::gtest_main)
 
 add_executable(
     test_scanner
